About html classes update
Uppdaterade klasserna för html - jobbar fortfarande på css kommer snart.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,3 +7,4 @@
 @import "../CSS/components/_header.css";
 @import "../CSS/components/_footer.css";
 @import "../CSS/components/_project-pg.css";
+@import "../CSS/pages/_about.css";
