added form + more css
Lagt till en komponent för form -. css ska flyttas runt senare.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,4 +7,5 @@
 @import "../CSS/components/_header.css";
 @import "../CSS/components/_footer.css";
 @import "../CSS/components/_project-pg.css";
+@import "../CSS/components/_mail-form.css";
 @import "../CSS/pages/_about.css";
