--- a/CSS/pages/_about.css
+++ b/CSS/pages/_about.css
@@ -56,7 +56,7 @@ flex-direction: column;
     max-width: 37ch;
     color: white;
     text-decoration: none;
-    font-size: 4rem;
+    /*font-size: 4rem;*/
 }
 
 .about-header h2 span {
@@ -71,4 +71,75 @@ flex-direction: column;
     max-width: 65%; 
     color: white; 
     margin-bottom: 1rem;
+}
+
+/* Contact container part */
+
+
+.contact-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 5%;
+    background: #000;
+    color: #fff;
+    min-height: 100vh;
+    gap: 1rem;
+}
+
+/* Contact INFO part */
+
+.info-container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-left: 20px;
+}
+
+.vertical-line {
+    position: absolute;
+    display: flex;
+    flex: 1;
+    right: 0%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1.5px;
+    height: 200px; /* Adjust height as needed */
+    background-color: #fff;
+}
+
+.info-container-content {
+    flex: 1;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.info-container-content h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.info-container-content p {
+    color: rgba(255, 255, 255, 0.8);
+    margin: 5px 0;
+}
+
+/* Profile IMG part */
+
+.profile-image {
+    flex: 0.8;
+    /*width: 50%;
+    height: 50%;*/
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profile-image img {
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+    display: block;
+    margin: auto;
 }
