--- a/CSS/pages/_about.css
+++ b/CSS/pages/_about.css
@@ -52,7 +52,7 @@ flex-direction: column;
     padding: 5%;
 }
 
-.about-header h2 {
+.about-header h1 {
     max-width: 37ch;
     color: white;
     text-decoration: none;
@@ -117,7 +117,7 @@ flex-direction: column;
 }
 
 .info-container-content h2 {
-    font-size: 24px;
+    /*font-size: 24px;*/
     margin-bottom: 10px;
 }
 
