--- a/CSS/pages/_about.css
+++ b/CSS/pages/_about.css
@@ -126,6 +126,15 @@ TODO
     margin-top: 2rem;
 }
 
+.info-container-content h2 {
+    color: white;
+}
+
+.info-container-content p {
+    color: rgba(255, 255, 255, 0.8);
+    margin-right: auto; /* max width */
+}
+
 /* ... Profilbild ... */
 
 .profile-image {
@@ -168,10 +177,5 @@ TODO
     .info-container-content {
         text-align: right;
         padding-right: 20px;
-    }
-
-    .info-container-content p {
-        color: rgba(255, 255, 255, 0.8);
-        margin-right: auto; /* max width */
     }
 }
