--- a/CSS/pages/_about.css
+++ b/CSS/pages/_about.css
@@ -108,12 +108,12 @@ TODO
 }
 
 .about-content {
-    flex: 1;
+    flex: 2;
     padding-top: 200px;
 }
 
 .about-content p {
-    max-width: 65%; 
+    /*max-width: 65%;*/ 
     color: white; 
     margin-bottom: 1rem;
 }
