--- a/CSS/pages/_about.css
+++ b/CSS/pages/_about.css
@@ -95,7 +95,7 @@ TODO
 .about-header h1 span {
     color: red;
 }
-
+/*
 @media (min-width: 48em) {
     .about-content-container {
         display: flex;
@@ -112,7 +112,7 @@ TODO
         flex: 2;
         padding-top: 200px;
     }
-}
+}*/
 
 .about-content {
     padding-top: 200px;
@@ -132,11 +132,12 @@ TODO
     flex-direction: column-reverse;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
-    gap: 8rem;
+    padding: var(--edge-pd);
+    gap: 2rem;
     margin: 0 auto;
     background: #000;
     min-height: 100vh;
+    margin-top: 10em;
 }
 
 .info-container {
@@ -167,10 +168,12 @@ TODO
 
 /* ... Profilbild ... */
 
-.profile-image {
+.profile-image { /* Sätt en max width ev*/
     flex: 0.8;
     border-radius: 50%;
     overflow: hidden;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 .profile-image img {
@@ -182,10 +185,16 @@ TODO
 }
 
 @media (min-width: 48em) {
+    .about {
+        padding: 5em 5% 5em 5%;
+    }
+
     .contact-container {
         flex-direction: row;
-        padding: 5%;  
+        padding: 5em 5% 5em 5%;  
         gap: 1rem;
+        margin-top: 0;
+        min-height: auto;
     }
 
     .info-container {
@@ -207,5 +216,52 @@ TODO
     .info-container-content {
         text-align: right;
         padding-right: 20px;
+    }
+
+    /*
+    .about-content p {
+        font-size: clamp(1rem, 0.6vw + 0.2rem, 2rem);
+    }*/
+}
+
+@media (min-width: 64em) {
+    .about-content p {
+        max-width: 70ch;
+    }
+}
+
+@media (min-width: 80em) {
+    .about-content p {
+        max-width: 75ch;
+    }
+}
+
+@media (min-width: 96em) {
+    .about-content p {
+        max-width: 80ch;
+    }
+}
+
+@media (min-width: 112em) {
+    .about-content p {
+        max-width: 85ch;
+    }
+}
+
+@media (min-width: 128em) {
+    .about-content p {
+        max-width: 90ch;
+    }
+}
+
+@media (min-width: 144em) {
+    .about-content p {
+        max-width: 95ch;
+    }
+}
+
+@media (min-width: 160em) {
+    .about-content p {
+        max-width: 100ch;
     }
 }
