--- a/CSS/utils/_base.css
+++ b/CSS/utils/_base.css
@@ -5,6 +5,10 @@ body {
     background-color: var(--clr-primary);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 img {
     width: 100%;
     height: 100%
