1st component for cc

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,4 +8,5 @@
 @import "../CSS/components/_footer.css";
 @import "../CSS/components/_project-pg.css";
 @import "../CSS/components/_mail-form.css";
+@import "../CSS/components/_hero.css";
 @import "../CSS/pages/_about.css";
