IMG & non finalized css for CC

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,3 +10,4 @@
 @import "../CSS/components/_mail-form.css";
 @import "../CSS/components/_hero.css";
 @import "../CSS/pages/_about.css";
+@import "../CSS/pages/_cleanchoice.css";
