--- a/CSS/utils/_base.css
+++ b/CSS/utils/_base.css
@@ -30,6 +30,7 @@ h2 {
     font-family: var(--ff-sub-heading);
     font-size: var(--fs-h2);
     font-weight: 700;
+    margin-bottom: 0.5rem;
 }
 
 h3 {
