--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,5 +9,6 @@
 @import "../CSS/components/_project-pg.css";
 @import "../CSS/components/_mail-form.css";
 @import "../CSS/components/_hero.css";
+@import "../CSS/components/_parallax.css";
 @import "../CSS/pages/_about.css";
 @import "../CSS/pages/_cleanchoice.css";
