Added STWK page
Lagt till STWK sida. Kod kommer.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,3 +12,4 @@
 @import "../CSS/components/_parallax.css";
 @import "../CSS/pages/_about.css";
 @import "../CSS/pages/_cleanchoice.css";
+@import "../CSS/pages/_stockwik.css";
