Mixed STWK updates
Jobbar fortfarande på sidan.

--- a/CSS/utils/_variables.css
+++ b/CSS/utils/_variables.css
@@ -19,7 +19,7 @@
 
 @media (min-width: 48em) { /* ---------------------------------------------------- Tablet ... 768px width */
     :root {
-        --clr-primary: red;
+        --clr-primary: darkgreen;
         --clr-secondary: white;
 
         --fs-h1: 3rem;
