--- a/CSS/pages/_stockwik.css
+++ b/CSS/pages/_stockwik.css
@@ -3,17 +3,17 @@
     flex-direction: column;
     overflow: hidden;
 }
-
+/*
 .one-container {
     max-width: 100%;
     overflow: hidden;
-}
-
+}*/
+/*
 .one-container-image {
     overflow: hidden;
     width: 100%;
    
-}
+}*/
 
 .one-container-image__image {
     object-fit: cover;
@@ -25,6 +25,9 @@
     color: white;
     padding: var(--edge-pd);
     font-size: var(--fs-body);
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 @media (min-width: 48em) {
@@ -32,7 +35,7 @@
         display: flex; /* 1 Det här sätter sektionen till flex */
         justify-content: center; /* 2 Det här centrerar all content i sektionen vågrätt */
         align-items: center; /* 3 Det här centrerar all content i sektionen lodrätt */
-        height: 100vh; /* Det här gör att sektionen tar upp hela skärmen [bla för demonstration] */
+        height: 40em; /* Det här gör att sektionen tar upp hela skärmen [bla för demonstration] */
         /* width: 100%; *//* Det här gör att sektionen tar upp hela skärmen [bla för demonstration] */
         overflow: hidden;
     }
@@ -54,13 +57,52 @@
     }
 
     .one-container-content { /* Den här containern håller texten, P */
-        display: flex; /* Vill centrera texten */
         flex: 1; /* Den här går tillbaka till display flex i .one-container, Ger texten ~33% av utrymmet */
-        color: white; /* Sätter texten till vit färg */
-        align-items: center; /* Med display flex i samma klass, centrerar texten lodrätt för att passa bättre med bilden på större skärmar */
-        padding: 0;
+        justify-content: center;
     }
 
+}
+
+@media (min-width: 64em) {
+    .one-container-content {
+        gap: 1.5em;
+    }
+}
+
+@media (min-width: 80em) {
+    .one-container-content {
+        gap: 2em;
+    }
+}
+
+@media (min-width: 96em) {
+    .one-container-content {
+        gap: 2.5em;
+    }
+}
+
+@media (min-width: 112em) {
+    .one-container-content {
+        gap: 3em;
+    }
+}
+
+@media (min-width: 128em) {
+    .one-container-content {
+        gap: 3.5em;
+    }
+}
+
+@media (min-width: 144em) {
+    .one-container-content {
+        gap: 4em;
+    }
+}
+
+@media (min-width: 160em) {
+    .one-container-content {
+        gap: 4.5em;
+    }
 }
 
 /*
@@ -74,3 +116,7 @@ kanske en max width på sektionen?
 
 
 */
+
+.empty {
+    height: 100vh;
+}
