--- a/CSS/utils/_base.css
+++ b/CSS/utils/_base.css
@@ -56,6 +56,7 @@ h6 { /* Underrubrik till h2 */
     font-family: var(--ff-body);
     font-size: var(--fs-h6);
     font-weight: lighter;
+    color: gainsboro;
 }
 
 
