--- a/CSS/utils/_base.css
+++ b/CSS/utils/_base.css
@@ -50,6 +50,7 @@ h5 { /* Underrubrik till h1 */
     font-family: var(--ff-body);
     font-size: var(--fs-h5);
     font-weight: lighter;
+    color: gainsboro;
 }
 
 h6 { /* Underrubrik till h2 */
