--- a/CSS/pages/_stockwik.css
+++ b/CSS/pages/_stockwik.css
@@ -133,6 +133,20 @@ html struktur ska snyggas till
 
 klar?
 
+Bilder:
+
+Stockholm 5
+
+Malmö 1
+
+Uppsala 1
+
+Örebro 1
+
+Sundsvall/Färila/bollnäs = Samma 2
+
+Göteborg/Vara = samma
+
 
 */
 
