--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,5 +11,5 @@
 @import "../CSS/components/_hero.css";
 @import "../CSS/components/_parallax.css";
 @import "../CSS/pages/_about.css";
-@import "../CSS/pages/_cleanchoice.css";
+/*@import "../CSS/pages/_cleanchoice.css";*/
 @import "../CSS/pages/_stockwik.css";
