--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,3 +13,4 @@
 @import "../CSS/pages/_about.css";
 /*@import "../CSS/pages/_cleanchoice.css";*/ /*behöver diffa stwk och cc galleriet. asap*/
 @import "../CSS/pages/_stockwik.css";
+@import "../CSS/pages/_booking.css";
